# n-body-solver

./: .gitignore  CMakeLists.txt  README.md  animate.py  body.cpp  body.h  cdata.csv  io.cpp  io.h  main.cpp  make_data.py  math_utils.cpp  math_utils.h  read.py
inc/: body.h  io.h  math_utils.h
input/: cdata.csv  input.conf  input_comets.conf  input_galaxies.conf  milky_way_andromeda.csv  solar_jfc.csv  solar_jfc_rev.csv
output/: README.md
python/: README.md  analyse_comets.py  animate.py  animate_comets.py  jfc_comets.csv  make_data_comets.py  make_data_galaxy.py  read.py  requirements.txt
src/: body.cpp  io.cpp  main.cpp  math_utils.cpp
